fixed button and h3 level font size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -471,9 +471,9 @@ hr{
 #formsub{
   font-size:3vh;
   margin-top:2vh;
-  background-color:transparent;
+  background-color:white;
   color:rgb(246,100,0);
-  padding:1vh;
+  padding:0 5vw;
   font-weight:800;
   min-width:18vw;
   height:6vh;
@@ -577,6 +577,10 @@ hr{
     margin:5vh auto;
     
   }
+  .finance-txt1 h3{
+    font-size:2vh;
+  }
+  
   .used-img{
     max-width:60vw;
     min-height:30vh;
@@ -619,7 +623,9 @@ hr{
   .contform{
     width:80vw;
   }
-  
+  #formsub{
+    width:80vw;
+  }
   
 }
 @media (max-width:321px){
